--- a/HTML_Practice/classes.html
+++ b/HTML_Practice/classes.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       .city {
-        background-color: tomato;
+        background-color: green;
         color: white;
         border: 2px solid black;
         margin: 20px;
@@ -26,5 +26,10 @@
       <h2>Tokyo</h2>
       <p>Tokyo is the capital of Japan.</p>
     </div>
+
+    <div class="city">
+        <h2>Delhi</h2>
+        <p>Delhi is the capital of India.</p>
+      </div>
   </body>
 </html>
